# ZCoin

./: .env  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  autobuild_entita_totale.sh  autobuild_portale.sh  autobuild_portale_patch_html.sh  autobuild_portale_reale.sh  autobuild_web.sh  generate_hyper_universe_stack.sh  genesis_v2.sh  highcoin_check.sh  index.html  index.md  index.min.html  install-highcoin-node.sh  master_all.sh  master_autobuild.sh  master_faucet_build.sh  master_of_dirt.sh  master_of_dirt_boot.sh  master_of_dirt_zdos.sh  master_of_evilcmd.sh  master_of_omega_v2.sh  omega_fix.sh  omega_patch_links.sh  rebuild_absolute.sh  vite.config.base.md  zero_bro_patch.sh  zero_bro_rebuild.sh
cli/: hyperlock.rs
config/: hyperlayer0.json
docs/: architecture.md  boot.css  boot.js  bridge-dsn.md  consensus-pow.md  explorer.html  faucet.html  genesis.md  index.html  index.md  install.md  miner.html  node-setup.md  nodes.html  overview.md  quantum-gateway.html  quantum-gateway.md  rpc-api.md  wallet-tx.md  wallet.html  zdos.css  zlang-miner.html  zlang-playground.html  zlang-vm.md  zlang.html
explorer/: index.html  miner.html  (+1 more)
node/: Cargo.toml
node/src/: lib.rs  main.rs  rpc.rs  rpc_server.rs  runtime.rs  server.rs  state.rs  vm.rs  zlang_parser.rs  zlang_tokenizer.rs
node/src/bridge/: mod.rs
node/src/rpc/: evm_rpc.rs  hyper_universe.rs  mod.rs  router.rs
node_backup_1780574684/: Cargo.toml
node_backup_1780574684/src/: lib.rs  main.rs  rpc_server.rs  runtime.rs  server.rs
node_backup_1780574684/src/rpc/: hyper_universe.rs  mod.rs
(+879 files in other folders)
