[package]
name = "node"
version = "0.2.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["json"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors"] }
